# uken-Jezyk-C-

./: README.md
kolokwium2/: CMakeLists.txt  z1.c  z1.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h
listaZadan1/: CMakeLists.txt  main.c  z1.c  z10.c  z10.h  z11.c  z12.c  z13.c  z13.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h  z6.c  z6.h  z7.c  z8.c  z8.h  z9.c
listaZadan2/: CMakeLists.txt  main.c  z1.c  z1.h  z10.c  z11.c  z11.h  z12.c  z12.h  z2.c  z2.h  z3.c  z4.c  z4.h  z5.c  z6.c  z7.c  z7.h  z8.c  z8.h  z9.c  z9.h
listaZadan3/: main.c  z1.c  z1.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h  z5For.c  z5For.h  z6.c  z6.h
listaZadan4/: CMakeLists.txt  main.c  z1.c  z1.h  z10.c  z10.h  z11.c  z11.h  z12.c  z12.h  z13.c  z13.h  z14.c  z14.h  z15.c  z15.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h  z6.c  z6.h  z7.c  z7.h  z8a.c  z8a.h  z8b.c  z8b.h  z9.c  z9.h
listaZadan5/: CMakeLists.txt  main.c  z1.c  z1.h  z10.c  z10.h  z11.c  z11.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h  z6.c  z6.h  z7.c  z7.h  z8.c  z8.h  z9.c  z9.h
listaZadan6/: CMakeLists.txt  main.c  z1.c  z1.h  z2.c  z2.h  z3.c  z3.h  z4.c  z4.h  z5.c  z5.h  z6.c  z6.h  z7.c  z7.h
zadanieDomowe/: main.c
