cmake_minimum_required(VERSION 3.29)
project(listaZadan1 C)

set(CMAKE_C_STANDARD 11)

add_executable(listaZadan1 main.c
        z1.c
        z2.c
        z3.c
        z4.c
        z4.h
        z3.h
        z5.c
        z5.h
        z6.c
        z7.c
        z6.h
        z7.h
        z8.c
        z8.h
        z9.c
        z9.h
        z10.c
        z10.h
        z11.c
        z11.h
        z12.c
        z12.h
        z13.c)
