cmake_minimum_required(VERSION 3.30)
project(listaZadan4 C)

set(CMAKE_C_STANDARD 11)

add_executable(listaZadan4 main.c
        z1.h
        z1.c
        z2.c
        z2.h
        z3.c
        z3.h
        z4.c
        z4.h
        z5.c
        z5.h
        z6.c
        z6.h
        z7.c
        z7.h
        z8a.c
        z8a.h
        z8b.c
        z8b.h
        z9.c
        z9.h
        z10.c
        z10.h
        z11.c
        z11.h
        z12.c
        z12.h)
