cmake_minimum_required(VERSION 3.30)
project(listaZadan5 C)

set(CMAKE_C_STANDARD 11)

add_executable(listaZadan5 main.c
        z1.c
        z1.h
        z2.c
        z2.h
        z3.c
        z3.h
        z4.c
        z4.h
        z5.c
        z5.h
        z6.c
        z6.h
        z7.c
        z7.h
        z8.c
        z8.h
        z9.c
        z9.h
        z10.c
        z10.h
        z11.c
        z11.h)
